# trusted-AI-interaction-infrastructure

./: .env.example  .gitignore  Cargo.toml  README.md  full_test.sh  query_chain_simple.py  quick_test.sh  run_test.sh  sync_and_test.ps1  sync_and_test.sh
abi/: .gitkeep  TLSNContentVerifierWithMultisig.json
contracts/: .env.cloud  add_whitelist_final.mjs  add_whitelist_new.mjs  add_whitelist_new2.mjs  add_whitelist_v2.mjs  check_keys.mjs  complete_whitelist.mjs  execute_whitelist.mjs  hardhat.config.ts  package.json  setup_whitelist.mjs
contracts/contracts/: TLSNContentVerifierWithMultisig.sol
contracts/ignition/modules/: TLSNVerifier.ts
contracts/scripts/: add-whitelist.js  add_whitelist.ts  bls-verify.js  check-status.js  check_notary.mjs  check_status.ts  check_test_key.mjs  check_whitelist.ts  debug-verify.js  debug_contract.mjs  debug_ecdsa.mjs  debug_hash.ts  deploy-bls.mjs  deploy.js  deploy.ts  deploy_direct.mjs  deploy_viem.ts  execute-op0.js  full_test.mjs  proof_hex.txt  setup-whitelist.js  sign-whitelist.js  test-verify-call.js  test_multisig.mjs  test_proof.mjs  test_validate.mjs  test_verify.ts  validate_from_file.mjs  validate_proof.mjs  verify-bls-local.ts  verify_hash.mjs
contracts/test/: DeployTLSN.ts  TLSNMultisig.ts
docs/: THIRD_PARTY_VERIFICATION.md
src/: ai_api_config.rs  config.rs  contract.rs  deploy.rs  diagnose_ecdsa.rs  diagnose_simple.rs  ipfs.rs  main.rs  main.rs.local.bak  manage_whitelist.rs  notary.rs  notary.rs.local.bak  query_chain.rs  submit_content.rs  submit_content.rs.local.bak  tlsn.rs  tlsn_ai.rs
tlsn-attestation/: Cargo.toml  README.md  dist_attestation_client.rs  dist_notary.rs  third_party_verify.rs
