[package]
name = "is6200-rust"
version = "0.1.0"
edition = "2021"
authors = ["IS6200 Project"]
description = "TLS Notary + Multisig Whitelist + Qwen AI Integration"

[dependencies]
# 核心异步运行时
tokio = { version = "1.40", features = ["full"] }

# 以太坊交互 (ethers-rs 2.0)
ethers = { version = "2.0", features = ["default", "legacy"] }

# 中间件
ethers-middleware = "2.0"

# 环境变量
dotenv = "0.15"

# HTTP 客户端
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"], default-features = false }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 命令行交互
dialoguer = "0.11"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 工具类
hex = "0.4"
thiserror = "1.0"
async-trait = "0.1"
bytes = "1.0"

# TLS 连接
native-tls = "0.2"

[patch.crates-io]
# Patching tlsn components to use local version for debugging
# tlsn-core = { path = "./tlsn-lib/crates/core" }

[workspace]
members = ["."]
exclude = ["tlsn-lib"]