[package]
name = "tlsn-attestation"
version = "0.1.0"
edition = "2021"
description = "TLSN Distributed Attestation - Integration with IS6200-Rust"
publish = false

[dependencies]
# TLSN components - using git dependencies for portability
tlsn = { git = "https://github.com/tlsnotary/tlsn", rev = "6168663" }
tlsn-formats = { git = "https://github.com/tlsnotary/tlsn", rev = "6168663" }
tlsn-server-fixture = { git = "https://github.com/tlsnotary/tlsn", rev = "6168663" }
tlsn-server-fixture-certs = { git = "https://github.com/tlsnotary/tlsn", rev = "6168663" }

anyhow = "1.0"
bincode = "1.3"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
http-body-util = "0.1"
hex = "0.4"
hyper = { version = "1.4", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["rt", "rt-multi-thread", "macros", "net", "io-std", "fs"] }
tokio-util = "0.7"

# For local development with IS6200-Rust workspace, uncomment:
# [patch.crates-io]
# tlsn = { path = "../tlsn-lib/crates/tlsn" }
# tlsn-formats = { path = "../tlsn-lib/crates/formats" }
# tlsn-server-fixture = { path = "../tlsn-lib/crates/server-fixture/server" }
# tlsn-server-fixture-certs = { path = "../tlsn-lib/crates/server-fixture/certs" }

[[example]]
name = "dist_notary"
path = "dist_notary.rs"

[[example]]
name = "dist_attestation_client"
path = "dist_attestation_client.rs"

[[example]]
name = "third_party_verify"
path = "third_party_verify.rs"